metadata/force-app/main/default/objects/CustomName_bLjeZ__c/CustomName_bLjeZ__c.object-meta.xml
<CustomObject>
    <description>Description_HpYyA</description>
    <label>CustomLabel_Fbgef</label>
    <nameField>
        <label>CustomLabel_Fbgef</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Fbgefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>