metadata/force-app/main/default/objects/CustomName_bLjeZ__c/fields/CustomField_GLfqa__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GLfqa__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldExlpU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>